:bug: *[id] is covered by header

--- a/source/css/style/_base/markdown.styl
+++ b/source/css/style/_base/markdown.styl
@@ -49,6 +49,9 @@ s
     font-smoothing antialiased
     osx-font-smoothing grayscale
 
+    &[id]
+        scroll-margin-top 54px
+
 a
     color var(--main-color)
     cursor pointer
